@@ -16784,7 +16784,9 @@ exhausted.  The default is 1,000.
 @Defreq {warnscale, su}
 Set the scaling unit used in certain warnings @c `output_warning()`
 to @var{su}, which can take the values @samp{u}, @samp{i}, @samp{c},
-@samp{p}, and @samp{P}.  The default is @samp{i}.
+@samp{p}, and @samp{P}.  The default is @samp{i}.  Ignored on
+@code{nroff}-mode output devices, for which these diagnostics report the
+vertical page location in lines.
 @endDefreq
 
 @Defreq {spreadwarn, [@Var{limit}]}
