@@ -10,6 +10,14 @@ not described.  There are more details in the man and info pages.
 VERSION next
 ============
 
+troff
+-----
+o In nroff mode (in other words, when producing output for terminal
+  devices), the formatter now reports warning diagnostics regarding
+  certain output problems using units of lines instead of inches (or the
+  unit configured with the `warnscale` request) to describe the vertical
+  drawing position where the problem occurred.
+
 eqn
 ---
 
